fix: close slider main block animation (jump main block)

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -54,7 +54,7 @@
   align-items: center;
   transition: 0.9s;
   transform-style: preserve-3d;
-  //height: 80vw;
+  height: 80vh;
   &.default-transform {
     transform: rotateX(51deg) rotateZ(-25deg) rotateY(10deg);
     transform-style: preserve-3d;
